--- a/Platforms/Android/AndroidManifest.xml
+++ b/Platforms/Android/AndroidManifest.xml
@@ -6,6 +6,7 @@
 		android:roundIcon="@mipmap/appicon_round"
 		android:supportsRtl="true"
 		android:usesCleartextTraffic="true">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAPT12YJBn1ShwrUB_SzizSGHm9RGt0Yis" />
 
 		<service
             android:name="communityToolkit.maui.media.services"
@@ -34,5 +35,6 @@
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 	<uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 </manifest>
