--- a/PM2E2GRUPO2.csproj
+++ b/PM2E2GRUPO2.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="Views\SiteRegister.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\SiteUpdate.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\SiteVideo.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
